crates/dsrs-macros/tests/ui/tuple_struct.stderr
error: #[derive(Signature)] requires named fields
 --> tests/ui/tuple_struct.rs:4:1
  |
4 | struct TupleSig(String, i32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
