crates/dsrs-macros/tests/ui/tuple_struct.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct TupleSig(String, i32);

fn main() {}
